[gd_scene load_steps=50 format=3 uid="uid://hbfip2tghpob"]

[ext_resource type="Shader" uid="uid://kx1msrulrq2v" path="res://shaders/background_opacity.tres" id="1_q6upu"]
[ext_resource type="Texture2D" uid="uid://b7g7sfkus2msy" path="res://ressources/images/temp_fond-1.png.png" id="2_agewj"]
[ext_resource type="Script" path="res://scripts/main_select.gd" id="3_fue0e"]
[ext_resource type="Texture2D" uid="uid://g3i7o27g62t" path="res://ressources/images/studentA1.png" id="3_t37ws"]
[ext_resource type="Texture2D" uid="uid://vg2xs888flvn" path="res://ressources/images/Sprite_bouton.png" id="4_flrxx"]
[ext_resource type="Texture2D" uid="uid://duf7ihk4yucls" path="res://ressources/images/studentA2.png" id="4_plibi"]
[ext_resource type="Shader" uid="uid://dbdjyq2u3iwi6" path="res://shaders/wing.tres" id="5_nbuoa"]
[ext_resource type="Texture2D" uid="uid://dxtqm8ntffy5m" path="res://ressources/images/StudentAfall.png" id="5_r0uqx"]
[ext_resource type="Texture2D" uid="uid://c2jyv58nsm15a" path="res://ressources/images/goat.png" id="5_vc2lj"]
[ext_resource type="FontFile" uid="uid://dwkpjj0o5bk8y" path="res://ressources/fonts/Xolonium-Regular.ttf" id="6_07vp5"]
[ext_resource type="Texture2D" uid="uid://dwe1wgd0eqp4m" path="res://ressources/images/StudentAjump.png" id="6_mwgbg"]
[ext_resource type="Texture2D" uid="uid://df5c12qe5rkj5" path="res://ressources/images/sneak.png" id="7_urfml"]
[ext_resource type="Texture2D" uid="uid://cq8acad81146r" path="res://ressources/images/Studenthaut-1.png" id="8_2sjw8"]
[ext_resource type="Texture2D" uid="uid://d2wjix7xlvk0p" path="res://ressources/images/Studenthaut-2.png" id="9_jwja8"]
[ext_resource type="Texture2D" uid="uid://b5aebivgsdxlm" path="res://ressources/images/studentA_marche1.png" id="10_iju47"]
[ext_resource type="Texture2D" uid="uid://dvfvru3b5wus1" path="res://ressources/images/studentA_marche2.png" id="11_ahhuu"]
[ext_resource type="Texture2D" uid="uid://ddmk5vg0t8lfe" path="res://ressources/images/studentA_marche3.png" id="12_o3ub7"]
[ext_resource type="Texture2D" uid="uid://bmsfej5fhcbui" path="res://ressources/images/studentA_marche4.png" id="13_w8cjc"]
[ext_resource type="PackedScene" uid="uid://c3t25jf77014j" path="res://scenes/skill_select.tscn" id="14_h5ilx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_drw6o"]
shader = ExtResource("1_q6upu")
shader_parameter/Background_luminosity = 0.75

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_25uxc"]

[sub_resource type="Gradient" id="Gradient_lyq3r"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_a46vb"]
gradient = SubResource("Gradient_lyq3r")
fill_from = Vector2(0.465, 0.61)
fill_to = Vector2(0.005, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f2hws"]
shader = ExtResource("5_nbuoa")
shader_parameter/ColorParameter = Color(1, 0, 0, 1)
shader_parameter/Texture2DParameter = SubResource("GradientTexture2D_a46vb")

[sub_resource type="Gradient" id="Gradient_dse18"]
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_vk162"]
gradient = SubResource("Gradient_dse18")
fill = 1
fill_from = Vector2(0.5, 0.555046)
fill_to = Vector2(0.770642, 0.366972)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_6eveq"]

[sub_resource type="Gradient" id="Gradient_prr45"]
offsets = PackedFloat32Array(0, 0.411765, 1)
colors = PackedColorArray(0, 0, 0, 1, 0.589096, 0.589096, 0.589095, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_lkl7w"]
gradient = SubResource("Gradient_prr45")
fill_from = Vector2(0.485, 0.66)
fill_to = Vector2(0, 0)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8lcf3"]
shader = ExtResource("5_nbuoa")
shader_parameter/ColorParameter = Color(0.909804, 0.811765, 0, 1)
shader_parameter/Texture2DParameter = SubResource("GradientTexture2D_lkl7w")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mx70k"]

[sub_resource type="Gradient" id="Gradient_bmtfp"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_drcm6"]
gradient = SubResource("Gradient_bmtfp")
fill_from = Vector2(0.1, 0.59)
fill_to = Vector2(0.005, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e4ndw"]
shader = ExtResource("5_nbuoa")
shader_parameter/ColorParameter = Color(0, 0.513726, 0, 1)
shader_parameter/Texture2DParameter = SubResource("GradientTexture2D_drcm6")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_suren"]

[sub_resource type="Gradient" id="Gradient_yv88r"]

[sub_resource type="GradientTexture2D" id="GradientTexture2D_3qyje"]
gradient = SubResource("Gradient_yv88r")
fill_from = Vector2(0.22, 0.59)
fill_to = Vector2(0, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4u18x"]
shader = ExtResource("5_nbuoa")
shader_parameter/ColorParameter = Color(0.0375274, 0.275382, 0.999993, 1)
shader_parameter/Texture2DParameter = SubResource("GradientTexture2D_3qyje")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0r1vp"]

[sub_resource type="Gradient" id="Gradient_s0qjy"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.506494, 0.75974)
colors = PackedColorArray(1, 1, 1, 0.419608, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_tga2w"]
gradient = SubResource("Gradient_s0qjy")
fill = 1
fill_from = Vector2(0.486239, 0.568807)
fill_to = Vector2(0.90367, 0.0825688)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_0yuvi"]

[sub_resource type="Gradient" id="Gradient_asg2t"]
offsets = PackedFloat32Array(0, 0.655738)
colors = PackedColorArray(0, 0, 0, 1, 0.720467, 0.720468, 0.720467, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xpxw5"]
gradient = SubResource("Gradient_asg2t")
fill_from = Vector2(0.360215, 0.698925)
fill_to = Vector2(0.946237, 0.0645161)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_oi11t"]
shader = ExtResource("5_nbuoa")
shader_parameter/ColorParameter = Color(0.56059, 1, 0.801674, 0.654902)
shader_parameter/Texture2DParameter = SubResource("GradientTexture2D_xpxw5")

[sub_resource type="SpriteFrames" id="SpriteFrames_klneh"]

[sub_resource type="SpriteFrames" id="SpriteFrames_m4omc"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_t37ws")
}, {
"duration": 1.0,
"texture": ExtResource("4_plibi")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_r0uqx")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_mwgbg")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("7_urfml")
}],
"loop": true,
"name": &"sneak",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_2sjw8")
}, {
"duration": 1.0,
"texture": ExtResource("9_jwja8")
}],
"loop": true,
"name": &"view_top",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("10_iju47")
}, {
"duration": 1.0,
"texture": ExtResource("11_ahhuu")
}, {
"duration": 1.0,
"texture": ExtResource("12_o3ub7")
}, {
"duration": 1.0,
"texture": ExtResource("13_w8cjc")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="Gradient" id="Gradient_deyqw"]
interpolation_mode = 2
offsets = PackedFloat32Array(0.175325, 0.337662)
colors = PackedColorArray(0, 0, 0, 0.545098, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_4alwd"]
gradient = SubResource("Gradient_deyqw")
fill = 1
fill_from = Vector2(0.5, 0.7)
fill_to = Vector2(0.5, 0.3)
metadata/_snap_enabled = true

[node name="CanvasLayer" type="CanvasLayer"]

[node name="TextureRect" type="TextureRect" parent="."]
z_index = -2
texture_filter = 1
material = SubResource("ShaderMaterial_drw6o")
offset_left = -5.0
offset_top = -329.0
offset_right = 1280.0
offset_bottom = 1042.0
texture = ExtResource("2_agewj")

[node name="ColorRect" type="ColorRect" parent="."]
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 495.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.462745)

[node name="dialogue" type="RichTextLabel" parent="ColorRect"]
layout_mode = 0
offset_left = 51.0
offset_top = 19.0
offset_right = 1094.0
offset_bottom = 133.0
theme_override_fonts/normal_font = ExtResource("6_07vp5")
theme_override_font_sizes/normal_font_size = 20
text = "Un job sauvage apparait."

[node name="main_select" type="Node2D" parent="ColorRect"]
visible = false
position = Vector2(660, 111)
script = ExtResource("3_fue0e")

[node name="attack" type="Button" parent="ColorRect/main_select"]
z_index = 1
offset_left = -189.5
offset_top = -68.4998
offset_right = -8.50006
offset_bottom = -1.49985
theme_override_styles/focus = SubResource("StyleBoxEmpty_25uxc")
flat = true
metadata/_edit_use_anchors_ = true

[node name="attack_sp" type="Sprite2D" parent="ColorRect/main_select/attack"]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_f2hws")
position = Vector2(78.875, 33.9375)
rotation = -3.14159
scale = Vector2(4.445, -4.383)
texture = ExtResource("4_flrxx")

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/main_select/attack"]
z_index = 1
layout_mode = 0
offset_left = 34.0
offset_top = 24.0
offset_right = 127.0
offset_bottom = 49.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("6_07vp5")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[color=black]ATTACK"
scroll_active = false

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/main_select/attack"]
position = Vector2(73.9932, 43.9921)
rotation = 0.127409
scale = Vector2(3.21402, 1.27931)
texture = SubResource("GradientTexture2D_vk162")

[node name="skills" type="Button" parent="ColorRect/main_select"]
z_index = 1
offset_left = 39.4999
offset_top = -69.4998
offset_right = 209.5
offset_bottom = 3.50015
theme_override_styles/focus = SubResource("StyleBoxEmpty_6eveq")
flat = true
metadata/_edit_use_anchors_ = true

[node name="skills_sp" type="Sprite2D" parent="ColorRect/main_select/skills"]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_8lcf3")
position = Vector2(78.875, 33.9375)
scale = Vector2(4.44531, 4.38281)
texture = ExtResource("4_flrxx")

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/main_select/skills"]
z_index = 1
layout_mode = 0
offset_left = 28.0
offset_top = 26.0
offset_right = 119.0
offset_bottom = 52.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("6_07vp5")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[color=black]SKILLS"
scroll_active = false

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/main_select/skills"]
position = Vector2(80.3337, 45.327)
rotation = -0.232129
scale = Vector2(3.39725, 1.36548)
texture = SubResource("GradientTexture2D_vk162")

[node name="items" type="Button" parent="ColorRect/main_select"]
z_index = 1
offset_left = -152.5
offset_top = 12.5002
offset_right = 28.4999
offset_bottom = 79.5002
theme_override_styles/focus = SubResource("StyleBoxEmpty_mx70k")
text = "ITEMS"
flat = true
metadata/_edit_use_anchors_ = true

[node name="items_sp" type="Sprite2D" parent="ColorRect/main_select/items"]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_e4ndw")
position = Vector2(78.875, 33.9375)
rotation = -3.14159
scale = Vector2(4.445, 4.383)
texture = ExtResource("4_flrxx")

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/main_select/items"]
z_index = 1
layout_mode = 0
offset_left = 52.0
offset_top = 13.0
offset_right = 124.0
offset_bottom = 39.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("6_07vp5")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[color=black]ITEMS"
scroll_active = false

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/main_select/items"]
position = Vector2(74.8993, 47.825)
rotation = -0.232129
scale = Vector2(3.21402, 1.40239)
texture = SubResource("GradientTexture2D_vk162")

[node name="leave" type="Button" parent="ColorRect/main_select"]
z_index = 1
offset_left = 0.499939
offset_top = 12.5002
offset_right = 181.5
offset_bottom = 79.5002
theme_override_styles/focus = SubResource("StyleBoxEmpty_suren")
text = "LEAVE"
flat = true
metadata/_edit_use_anchors_ = true

[node name="leave_sp" type="Sprite2D" parent="ColorRect/main_select/leave"]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_4u18x")
position = Vector2(78.875, 33.9375)
rotation = -3.14159
scale = Vector2(-4.445, 4.383)
texture = ExtResource("4_flrxx")

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/main_select/leave"]
z_index = 1
layout_mode = 0
offset_left = 27.0
offset_top = 12.0
offset_right = 115.0
offset_bottom = 38.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("6_07vp5")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[color=black]LEAVE"
scroll_active = false

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/main_select/leave"]
position = Vector2(73.9932, 43.9921)
rotation = 0.127409
scale = Vector2(3.21402, 1.27931)
texture = SubResource("GradientTexture2D_vk162")

[node name="Button" type="Button" parent="ColorRect/main_select"]
z_index = 1
offset_left = -31.5001
offset_top = -71.4998
offset_right = 40.4999
offset_bottom = 0.500153
theme_override_styles/focus = SubResource("StyleBoxEmpty_0r1vp")
text = "ULT"
flat = true
metadata/_edit_use_anchors_ = true

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/main_select/Button"]
position = Vector2(35, 37)
scale = Vector2(0.269828, 0.277573)
texture = ExtResource("5_vc2lj")

[node name="Sprite2D" type="Sprite2D" parent="ColorRect/main_select"]
position = Vector2(-4.75006, -18.4998)
scale = Vector2(6.53906, 3.04688)
texture = SubResource("GradientTexture2D_tga2w")

[node name="SkillSelect" parent="ColorRect" instance=ExtResource("14_h5ilx")]
visible = false
layout_mode = 0
offset_left = 50.0
offset_top = 35.0
offset_right = 1202.0
offset_bottom = 188.0

[node name="back" type="Button" parent="ColorRect"]
z_index = 2
layout_mode = 1
anchors_preset = -1
anchor_left = 0.933
anchor_top = 0.5
anchor_right = 0.996
anchor_bottom = 0.967
offset_left = 2.76001
offset_top = -58.5
offset_right = 2.18408
offset_bottom = 0.048996
theme_override_styles/focus = SubResource("StyleBoxEmpty_0yuvi")
flat = true

[node name="back_sp" type="Sprite2D" parent="ColorRect/back"]
texture_filter = 1
material = SubResource("ShaderMaterial_oi11t")
position = Vector2(38, 60)
rotation = -1.5708
scale = Vector2(4.44531, 4.38281)
texture = ExtResource("4_flrxx")

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/back"]
layout_mode = 0
offset_left = 8.0
offset_top = 50.0
offset_right = 80.0
offset_bottom = 76.0
mouse_filter = 1
theme_override_fonts/normal_font = ExtResource("6_07vp5")
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[color=black]BACK"

[node name="Enemy_fight_sprite" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(771, 342)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_klneh")

[node name="Player_fight_sprite" type="AnimatedSprite2D" parent="."]
z_index = 2
texture_filter = 1
position = Vector2(357, 342)
rotation = -3.14159
scale = Vector2(3, -3)
sprite_frames = SubResource("SpriteFrames_m4omc")

[node name="Sprite2D" type="Sprite2D" parent="Player_fight_sprite"]
z_index = 1
z_as_relative = false
position = Vector2(1.33333, 7.33333)
scale = Vector2(1, 0.5)
texture = SubResource("GradientTexture2D_4alwd")

[node name="Button" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0

[connection signal="mouse_entered" from="ColorRect/main_select/attack" to="ColorRect/main_select" method="_on_attack_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/main_select/attack" to="ColorRect/main_select" method="_on_attack_mouse_exited"]
[connection signal="pressed" from="ColorRect/main_select/attack" to="ColorRect/main_select" method="_on_attack_pressed"]
[connection signal="mouse_entered" from="ColorRect/main_select/skills" to="ColorRect/main_select" method="_on_skills_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/main_select/skills" to="ColorRect/main_select" method="_on_skills_mouse_exited"]
[connection signal="pressed" from="ColorRect/main_select/skills" to="ColorRect/main_select" method="_on_skills_pressed"]
[connection signal="mouse_entered" from="ColorRect/main_select/items" to="ColorRect/main_select" method="_on_items_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/main_select/items" to="ColorRect/main_select" method="_on_items_mouse_exited"]
[connection signal="pressed" from="ColorRect/main_select/items" to="ColorRect/main_select" method="_on_items_pressed"]
[connection signal="mouse_entered" from="ColorRect/main_select/leave" to="ColorRect/main_select" method="_on_leave_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/main_select/leave" to="ColorRect/main_select" method="_on_leave_mouse_exited"]
[connection signal="pressed" from="ColorRect/main_select/leave" to="ColorRect/main_select" method="_on_leave_pressed"]
[connection signal="mouse_entered" from="ColorRect/back" to="ColorRect/main_select" method="_on_back_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect/back" to="ColorRect/main_select" method="_on_back_mouse_exited"]
[connection signal="pressed" from="ColorRect/back" to="ColorRect/main_select" method="_on_back_pressed"]
